2009-01-13  Gary Benson  <gbenson@redhat.com>

	* contrib/jck/compile-native-code.sh: Build with -m32 or -m64.

2009-01-13  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/14.0b08/icedtea-hotspot-dispatch.patch: Remove,
	replaced by ...
	* patches/hotspot/14.0b08/icedtea-6791168.patch: New.
	* patches/hotspot/14.0b08/icedtea-includedb.patch: Update.
	* HACKING: Update for the above.
	* Makefile.am: Update for the above.

2009-01-12  Andrew Haley  <aph@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp (SharkBlock::do_ldc):
        Add logic for ldc(Class).

2009-01-11  Mark Wielaard  <mark@klomp.org>

	* Makefile.am: Escape single quotes in empty bootclasspath.

2009-01-09  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-awt-window-size.patch: New file. Fix X11 window size
	calculation.
	* Makefile.am: Apply patch.
	* HACKING: Document the above.

2009-01-09  Gary Benson  <gbenson@redhat.com>

	* contrib/mixtec-sleep-on-bomb.patch: New file.

2009-01-09  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp
	(CppInterpreter::main_loop): Catch unhandled messages.

2009-01-09  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-cc-interp-jvmti.patch: Also disable pop_frame.

2009-01-08  Matthias Klose  <doko@ubuntu.com>

	PR icedtea/277
	* patches/hotspot/14.0b08/icedtea-includedb.patch: New.
	* Makefile.am: Apply.
	* HACKING: Document the above.

2009-01-08  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/14.0b08/icedtea-no-precompiled.patch: Don't use
	precompiled header files in hotspot.
	* HACKING: Document the above.

2009-01-08  Christian Thalinger  <christian.thalinger@gmail.com>

	* acinclude.m4 (SET_OS_DIRS): New function.
	* configure.ac: Call SET_OS_DIRS and made ALSA check conditional.
	* Makefile.am (LINUX_DIR): Renamed to OS_DIR and use BUILD_OS_DIR
	variable.
	(ICEDTEA_ENV, ICEDTEA_ENV_ECJ): Added OS_PATH to PATH.

2009-01-07  Matthias Klose  <doko@ubuntu.com>
