@@ -1,3 +1,11 @@
+2009-01-13  Omair Majid  <omajid@redhat.com>
+
+	* rt/net/sourceforge/jnlp/cache/ResourceTracker.java
+	(downloadResource): Call getVersionedResourceURL to get the versioned jar.
+	(initializeResource): Likewise.
+	(getVersionedResourceURL): New function. Constructs a URL with a
+	version-id as the query.
+
 2009-01-13  Gary Benson  <gbenson@redhat.com>
 
 	* contrib/jck/compile-native-code.sh: Build with -m32 or -m64.
